# trnascan-py

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: BENCHMARK.md  PROFILE.md
recipe/: meta.yaml
scripts/: corpus_benchmark.py  profile_v1.py
src/trnascan_py/: __init__.py  anticodon.py  cli.py  faidx.py  fasta.py  genetic_code.py  infernal.py  intron.py  models.py  models_registry.py  oracle.py  pipeline.py  pseudogene.py
src/trnascan_py/data/models/: NOTICE.md
tests/: conftest.py  test_anticodon.py  test_bundled_models.py  test_differential.py  test_faidx.py  test_fasta.py  test_genetic_code.py  test_intron.py  test_mito.py  test_models.py  test_parsers.py  test_pipeline.py  test_pseudogene.py
tests/data/: amber_suppressor.fa  intron_trna.fa  yeast_trna_phe.fa
